# py-moneyed-fx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini
example_project/: settings.py  urls.py
moneyed_fx/: apps.py  models.py  moneyed_patches.py  services.py
moneyed_fx/migrations/: 0001_initial.py  0002_alter_fxrate_base_currency_and_more.py
moneyed_fx/tests/: __init__.py  factories.py  test_moneyed_patches.py  test_services.py
moneyed_fx/tests/mock_source/: services.py
open_exchange_rate/: services.py
open_exchange_rates/: api.py  services.py
